unpackaged/main/default/objects/sfsp__SalesNode__c/sfsp__SalesNode__c.object-meta.xml
<CustomObject>
    <label>Sales Node</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Nodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>