unpackaged/main/default/objects/sfsp__SalesNode__c/fields/sfsp__Color__c.field-meta.xml
<CustomField>
    <fullName>sfsp__Color__c</fullName>
    <label>Node Color</label>
    <length>80</length>
    <type>Text</type>
</CustomField>