unpackaged/main/default/objects/sfsp__SalesNode__c/fields/sfsp__HierarchyReferenceData__c.field-meta.xml
<CustomField>
    <fullName>sfsp__HierarchyReferenceData__c</fullName>
    <description>JSON array of imported hierarchy reference fields data</description>
    <label>Hierarchy Reference Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>