unpackaged/main/default/objects/sfsp__SalesNode__c/fields/sfsp__Owner__c.field-meta.xml
<CustomField>
    <fullName>sfsp__Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Sales Nodes</relationshipLabel>
    <relationshipName>SalesNodes</relationshipName>
    <type>Lookup</type>
</CustomField>