unpackaged/main/default/objects/sfsp__SalesNode__c/fields/sfsp__Parent__c.field-meta.xml
<CustomField>
    <fullName>sfsp__Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>sfsp__SalesNode__c</referenceTo>
    <relationshipLabel>Sales Nodes</relationshipLabel>
    <relationshipName>SalesNodes</relationshipName>
    <type>Lookup</type>
</CustomField>