unpackaged/main/default/objects/sfsp__SalesNode__c/fields/sfsp__Priority__c.field-meta.xml
<CustomField>
    <fullName>sfsp__Priority__c</fullName>
    <label>Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>