unpackaged/main/default/objects/sfsp__SalesNode__c/fields/sfsp__QuotaRollup__c.field-meta.xml
<CustomField>
    <fullName>sfsp__QuotaRollup__c</fullName>
    <label>Quota Rollup</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>