unpackaged/main/default/objects/sfsp__SalesNode__c/fields/sfsp__ReferenceFields__c.field-meta.xml
<CustomField>
    <fullName>sfsp__ReferenceFields__c</fullName>
    <description>JSON array of reference fields metadata</description>
    <label>Reference Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>