unpackaged/main/default/objects/sfsp__SalesNode__c/fields/sfsp__RuleLogics__c.field-meta.xml
<CustomField>
    <fullName>sfsp__RuleLogics__c</fullName>
    <description>JSON map of assignment object ids to rule logic</description>
    <label>Rule Logics</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>