unpackaged/main/default/objects/sfsp__SalesNode__c/fields/sfsp__SalesPlanNode__c.field-meta.xml
<CustomField>
    <fullName>sfsp__SalesPlanNode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Plan Node</label>
    <referenceTo>sfsp__SalesNode__c</referenceTo>
    <relationshipLabel>Sales Scenario Nodes</relationshipLabel>
    <relationshipName>SalesScenarioNodes</relationshipName>
    <type>Lookup</type>
</CustomField>