unpackaged/main/default/objects/sfsp__SalesNode__c/fields/sfsp__Segment__c.field-meta.xml
<CustomField>
    <fullName>sfsp__Segment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Segment</label>
    <referenceTo>sfsp__SalesNode__c</referenceTo>
    <relationshipLabel>Sales Territories</relationshipLabel>
    <relationshipName>SalesTerritories</relationshipName>
    <type>Lookup</type>
</CustomField>