unpackaged/main/default/objects/sfsp__SalesNode__c/fields/sfsp__StampDataSourceId__c.field-meta.xml
<CustomField>
    <fullName>sfsp__StampDataSourceId__c</fullName>
    <label>Stamp Data Source Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>