unpackaged/main/default/objects/sfsp__SalesNode__c/fields/sfsp__Target__c.field-meta.xml
<CustomField>
    <fullName>sfsp__Target__c</fullName>
    <label>Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>